--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,3 @@
-/* prefixed by https://autoprefixer.github.io (PostCSS: v7.0.26, autoprefixer: v9.7.3) */
-
 body {
   margin: 0;
   padding: 0;
@@ -574,8 +572,16 @@ input::-webkit-search-results-decoration {
     padding: 0;
   }
 
+  body.lock {
+    overflow: hidden;
+  }
+
   .page-header__wrapper {
+    position: fixed;
+    top: 0;
+    left: 0;
     margin-bottom: 20px;
+    z-index: 50;
   }
 
   .main-nav {
@@ -786,6 +792,7 @@ input::-webkit-search-results-decoration {
 }
 
 .main-menu__burger.button {
+  min-height: 50px;
   padding: 0;
   padding-right: 20px;
 }
@@ -1577,6 +1584,10 @@ input::-webkit-search-results-decoration {
 }
 
 @media (min-width: 320px) and (max-width: 640px) {
+  .main-menu__burger.button {
+    background: linear-gradient(to right, #d36e00, #e59100);
+  }
+
   .aside-list__item {
     width: 50%;
   }
