--- a/css/main.css
+++ b/css/main.css
@@ -68,6 +68,38 @@ input::-webkit-search-results-decoration {
   display: none;
 }
 
+input.error {
+ border: 1px solid #ff0000;
+}
+
+ label.error {
+  position: absolute;
+  left: 0;
+  bottom: -21px;
+  font-size: 10px;
+  color: #ff0000;
+}
+
+.page-filter__cost + label.error {
+  font-size: 0;
+}
+
+.main-footer__subscribe-form label.error{
+  color: #ff8900;
+}
+
+.modal-form label.error,
+.modal-enter__form label.error{
+  position: static;
+  margin-top: 4px;
+  font-size: 11px;
+  font-weight: normal;
+}
+
+button.mfp-close {
+  font-size: 0;
+}
+
 .visually-hidden:not(:focus):not(:active) {
   position: absolute;
   width: 1px;
@@ -462,23 +494,16 @@ input::-webkit-search-results-decoration {
   padding: 0;
 }
 
-.actions-list__item--amount::before {
-  content: '';
-  position: absolute;
-  top: -20px;
-  left: 44px;
-  width: 34px;
-  height: 32px;
-  background: url(../img/digits-bg.png) no-repeat; 
-}
-
 .actions-list__counter {
   position: absolute;
   top: -20px;
-  left: 58px;
+  left: 44px;
   font-size: 11px;
   line-height: 20px;
   color: #ffffff;
+  width: 34px;
+  height: 32px;
+  background: url(../img/digits-bg.png) no-repeat;
 }
 
 @media (max-width: 1280px) {
@@ -526,7 +551,7 @@ input::-webkit-search-results-decoration {
 
   .button__icon-phone::before {
     top: -8px;
-    left: 6px;
+    left: -2px;
   }
 
   .actions-list__item {
@@ -961,7 +986,7 @@ input::-webkit-search-results-decoration {
 
 .page-search__category-current {
   position: relative;
-  padding-top: 20px;
+  padding-top: 19px;
   padding-left: 14px;
   padding-right: 41px;
   padding-bottom: 19px;
@@ -1831,6 +1856,11 @@ input::-webkit-search-results-decoration {
 
   .page-filter__select-clear-cross {
     display: none;
+  }
+
+  .page-filter__cost + label.error {
+    font-size: 11px;
+    color: #ff8900;
   }
 }
 
@@ -3173,7 +3203,7 @@ input[type='checkbox']:checked + label .modal-enter__checkbox-indicator::after {
 .modal-enter__social--facebook::before {
   content: '';
   position: absolute;
-  top: 12px;
+  top: 30%;
   left: 32%;
   width: 9px;
   height: 16px;
@@ -3192,7 +3222,7 @@ input[type='checkbox']:checked + label .modal-enter__checkbox-indicator::after {
 .modal-enter__social--twitter::before {
   content: '';
   position: absolute;
-  top: 14px;
+  top: 34%;
   left: 32%;
   width: 16px;
   height: 13px;
@@ -3211,27 +3241,32 @@ input[type='checkbox']:checked + label .modal-enter__checkbox-indicator::after {
 .modal-enter__social--google::before {
   content: '';
   position: absolute;
-  top: 13px;
+  top: 33%;
   left: 32%;
   width: 16px;
   height: 16px;
   background: url(../img/google-icon.png) no-repeat;
 }
 
-#modal-callback {
+.modal-default {
   position: fixed;
   top: 50%;
   left: 50%;
+  padding: 30px 40px;
   -webkit-transform: translate(-50%, -50%);
       -ms-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
-  width: 378px;
-  padding: 29px 40px 46px 40px;
   background-color: #ffffff;
   color: #3b3b3b;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   z-index: 20;
+}
+
+#modal-callback {
+  width: 100%;
+  max-width: 378px;
+  padding: 29px 40px 46px 40px;
 }
 
 .modal-callback__show{
@@ -3264,36 +3299,104 @@ input[type='checkbox']:checked + label .modal-enter__checkbox-indicator::after {
   text-align: center;
 }
 
-
-input.error {
- border: 1px solid #ff0000;
-}
-label.error {
-  margin-top: 4px;
-  font-size: 11px;
-  font-weight: normal;
-  color: #ff0000;
+#modal-success {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  max-width: 380px;
+  text-align: center;
 }
 
-.main-footer__subscribe-form label.error {
-    position: absolute;
-    bottom: -22px;
-    color: #ff8900;
+span.modal-success-top {
+    margin-bottom: 20px;
+    font-size: 16px;
 }
 
-@media (min-width: 768px) and (max-width: 1023px) {
+.modal-success-content {
+  font-size: 16px;
+  line-height: 20px;
+  font-weight: 700;
+  text-transform: uppercase;
+  margin-bottom: 20px;
+}
+
+.modal-success-link {
+  font-size: 12px;
+  text-transform: uppercase;
+  text-decoration: underline;
+}
+
+@media (min-width: 320px) and (max-width: 1023px) {
   #modal-enter {
-    width: 600px;
-    padding: 25px;
+    width: 100%;
+    height: 100vh;
+    padding: 30px;
   }
 
-  .modal-enter__signup,
-  .modal-enter__social {
-    padding-right: 15px;
+  .modal-enter__wrapper {
+    flex-direction: column;
+  }
+
+  .modal-enter__signup {
+    width: auto;
+    padding: 0;
+    border: none;
+    margin-bottom: 30px;
   }
 
   .modal-title {
-    font-size: 22px;
-    line-height: 28px;
+    font-size: 20px;
+    text-align: center;
+  }
+
+  .modal-enter__form-button {
+    width: 100%;
+  }
+
+  .modal-enter__social {
+    width: auto;
+    padding: 0;
+  }
+
+  .modal-enter__social-wrap {
+    flex-wrap: nowrap;
+    align-items: flex-end;
+    justify-content: space-evenly;
+  }
+
+  .modal-enter__social-account {
+    width: 50px;
+    height: 50px;
+    padding: 0;
+    font-size: 0;
+    border-radius: 50%;
+  }
+
+  .modal-enter__social--facebook::before {
+     left: 40%;
+  }
+
+  #modal-enter .modal-enter__button-close {
+    top: 15px;
+    left: 10px;
+  }
+
+  #modal-enter .modal-enter__button-close::before,
+  #modal-enter .modal-enter__button-close::after {
+    background-color: #000000;
+  }
+
+}
+
+@media (min-width: 320px) and (max-width: 479px) {
+  #modal-callback .modal-enter__button-close {
+    top: 15px;
+    right: 10px;
+  }
+  
+  #modal-callback .modal-enter__button-close::before,
+  #modal-callback .modal-enter__button-close::after {
+    background-color: #000000;
   }
 }
