--- a/css/main.css
+++ b/css/main.css
@@ -495,6 +495,7 @@ button.mfp-close {
 }
 
 .actions-list__counter {
+  display: none;
   position: absolute;
   top: -20px;
   left: 44px;
@@ -979,70 +980,87 @@ button.mfp-close {
 }
 
 .page-search__category {
-  position: absolute;
-  top: 20px;
-  right: 167px;
-}
-
-.page-search__category-current {
   position: relative;
-  padding-top: 19px;
-  padding-left: 14px;
-  padding-right: 41px;
-  padding-bottom: 19px;
-  color: #616161;
-  background-color: #f5f5f5;
-  outline: none;
-  border: none;
-  cursor: pointer;
 }
 
-.page-search__category-current::before {
+.page-search__category::before {
   content: '';
   position: absolute;
   top: 10px;
-  left: 0px;
+  left: -1px;
   bottom: 9px;
   width: 1px;
   background-color: #dadada;
 }
 
-.page-search__category-current::after {
-  content: '';
-  position: absolute;
-  top: 24px;
-  right: 27px;
-  width: 6px;
-  height: 5px;
-  background: url(../img/arrow-category.png) no-repeat;
+.page-search__category .select2 {
+  min-width: 150px;
 }
 
-.page-search__category-full {
-  display: none;
-  position: absolute;
-  top: 40px;
-  left: 0;
-  width: 148px;
-  margin: 0;
-  padding: 0;
-  z-index: 1000;
-}
-
-.category-full {
+.page-search__category
+.select2-container--default
+.select2-selection--single {
+  border: none;
+  border-radius: 0;
   background-color: #f5f5f5;
-  list-style: none;
 }
 
-.category-full__item a {
-  display: block;
-  padding: 5px 15px;
+.page-search__category
+.select2-container
+.select2-selection--single {
+  min-height: 56px;
+  outline: none;
+}
+
+.page-search__category
+.select2-container--default
+.select2-selection--single
+.select2-selection__rendered {
+  font: inherit;
+  line-height: 18px;
   color: #616161;
-  text-decoration: none;
 }
 
-.category-full__item a:hover,
-.category-full__item a:focus {
-  background-color: #e4e4e4;
+.page-search__category
+.select2-container
+.select2-selection--single
+.select2-selection__rendered {
+  padding: 19px 15px;
+}
+
+.page-search__category
+.select2-container--default
+.select2-selection--single
+.select2-selection__arrow {
+  top: 13px;
+}
+
+.page-search__category
+.select2-dropdown--below {
+  background-color: #f5f5f5;
+  border: none;
+  border-radius: 0;
+  color: #616161;
+}
+
+.page-search__category
+.select2-results__option {
+  padding: 6px 15px;
+}
+
+.page-search__category
+.select2-container--default
+.select2-results__option[aria-selected=true]{
+  background: none;
+  color: #ff9a00;
+  font-weight: 700;
+}
+
+.page-search__category
+.select2-container--default
+.select2-results__option--highlighted[aria-selected]{
+  background: none;
+  color: #ff9a00;
 }
 
 .page-search__button-search {
@@ -1275,7 +1293,8 @@ button.mfp-close {
 
 .page-filter__select-form {
   position: relative;
-  width: 25%;
+  width: 23%;
+  margin-left: 18px;
   margin-bottom: 24px;
 }
 
@@ -1285,28 +1304,76 @@ button.mfp-close {
     display: flex;
 }
 
-.page-filter__select-title {
-  position: relative;
-  padding: 11px 45px 11px 15px;
-  margin-left: 20px;
-  font-size: 14px;
-  line-height: 18px;
-  text-align: left;
-  color: #9c9c9c;
-  background-color: #ffffff;
-  outline: none;
+.page-filter__select-form
+.select2-container--default
+.select2-selection--single {
   border: none;
-  cursor: pointer;
+  border-radius: 0;
 }
 
-.page-filter__select-title::before {
-  content: '';
-  position: absolute;
-  top: 17px;
-  right: 25px;
-  width: 6px;
-  height: 5px;
-  background: url(../img/arrow-filter.png) no-repeat;
+.page-filter__select-form
+.select2-container
+.select2-selection--single {
+  min-height: 40px;
+  outline: none;
+}
+
+.page-filter__select-form
+.select2-container--default
+.select2-selection--single
+.select2-selection__rendered {
+  font: inherit;
+  line-height: 18px;
+  color: #9c9c9c;
+}
+
+.page-filter__select-form
+.select2-container
+.select2-selection--single
+.select2-selection__rendered {
+  padding: 11px 15px;
+}
+
+.page-filter__select-form
+.select2-container--default
+.select2-selection--single
+.select2-selection__arrow {
+  top: 8px;
+  right: 15px;
+}
+
+.page-filter__select-form
+.select2-container--default
+.select2-selection--single
+.select2-selection__arrow b {
+  border-color: #ff8900 transparent transparent transparent;
+}
+
+.page-filter__select-form
+.select2-dropdown--below {
+  border: none;
+  border-radius: 0;
+  color: #616161;
+}
+
+.page-filter__select-form
+.select2-results__option {
+  padding: 6px 15px;
+}
+
+.page-filter__select-form
+.select2-container--default
+.select2-results__option[aria-selected=true]{
+  background: none;
+  color: #ff9a00;
+  font-weight: 700;
+}
+
+.page-filter__select-form
+.select2-container--default
+.select2-results__option--highlighted[aria-selected]{
+  background: none;
+  color: #ff9a00;
 }
 
 .page-filter__select-title--underline::before {
@@ -1319,44 +1386,11 @@ button.mfp-close {
   background-color: #f5f5f5;
 }
 
-.page-filter__select-list {
-  display: none;
-  position: absolute;
-  top: 39px;
-  left: 20px;
-  margin: 0;
-  padding: 0;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  list-style: none;
-  z-index: 1000;
-}
-
-.page-filter__select-title:hover .page-filter__select-title--underline::before,
-.page-filter__select-title:focus .page-filter__select-title--underline::before,
+.page-filter__select-form:hover .page-filter__select-title--underline::before,
+.page-filter__select-form:focus .page-filter__select-title--underline::before,
 .page-filter__cost-wrapper:hover .page-filter__cost-underline::after,
 .filter-cost:focus + .page-filter__cost-underline::after {
   background-color: #ff8500;
-}
-
-.page-filter__select-list--open {
-  display: block;
-}
-
-.select-list {
-  width: 92%;
-  background-color: #ffffff;
-}
-
-.select-list__item {
-  padding: 7px 15px;
-  color: #9c9c9c;
-  cursor: pointer;
-  border-bottom: 1px solid #f1f1f1;
-}
-
-.select-list__item:hover {
-  background-color: #efefef;
 }
 
 .page-filter__select-form-cost,
@@ -1374,7 +1408,6 @@ button.mfp-close {
   margin: auto;
   color: #ffffff;
   margin-right: 22px;
-  margin-left: 23px;
 }
 
 .page-filter__cost {
@@ -1800,11 +1833,7 @@ button.mfp-close {
     width: 100%;
     margin-bottom: 10px;
   }
-
-  .page-filter__select-title {
-    background: none;
-    color: #ffffff;
-  }
+  
   .page-filter__select-form:last-child {
     margin-top: 17px;
   }
@@ -2286,6 +2315,7 @@ button.mfp-close {
   padding-right: 10px;
   color: #3b3b3b;
   text-decoration: none;
+  cursor: pointer;
 }
 
 .product-card-actions__link:last-child {
