--- a/css/main.css
+++ b/css/main.css
@@ -1083,6 +1083,10 @@ button.mfp-close {
   background-color: #606a76;
 }
 
+.page-filter__select-block {
+  padding: 0 32px;
+}
+
 .page-filter__title-hidden {
   display: none;
 }
@@ -1229,46 +1233,42 @@ button.mfp-close {
   margin-bottom: 23px;
 }
 
-.page-filter__tab-wrapper,
- .page-filter__select-wrapper {
-  padding-left: 35px;
-  padding-right: 32px;
-}
-
 .page-filter__tab-strip {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 35%;
+  max-width: 300px;
   margin: 0;
   padding: 3px 4px;
   color: #000000;
   background-color: #efefef;
 }
 
-.page-filter__tab-label {
-  display: inline-block;
+.page-filter__tab-button {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 100%;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  padding: 15px;
   cursor: pointer;
 }
 
-.page-filter__tab-label input{
-  display: none;
-  position: relative;
+.page-filter__tab-text {
+  color: #696969;
 }
 
-.page-filter__tab-label input:checked + span{
-  color: #ffffff;
+.page-filter__tab-button--active {
   background: #ff8900;
 }
 
-.page-filter__tab-label:first-child {
-  margin-right: 10px;
-}
-
-
-.page-filter__tab-button {
-  display: block;
-  padding-top: 15px;
-  padding-right: 47px;
-  padding-bottom: 12px;
-  padding-left: 57px;
-  color: #696969;
+.page-filter__tab-button--active span {
+    color: #ffffff;
 }
 
 .page-filter__select-wrapper {
@@ -1282,10 +1282,17 @@ button.mfp-close {
   margin-bottom: 28px;
 }
 
+.page-filter__select-wrapper--hide {
+  display: none;
+}
+
 .page-filter__select-form-layout {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   margin-left: -20px;
@@ -1525,6 +1532,10 @@ button.mfp-close {
     padding: 0 15px;
   }
 
+  .page-filter__menu-list {
+    width: 100%;
+  }
+
   .filter__list {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -1546,6 +1557,12 @@ button.mfp-close {
     line-height: 19px;  
   }
 
+    .page-filter__select-form-layout {
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+  }
+
   .page-filter__select-block {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -1554,18 +1571,23 @@ button.mfp-close {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    width: 75%;
+    width: 70%;
     margin-top: 20px;
 }
 
   .page-filter__select-form {
-    width: 50%;
+    width: 45%;
+  }
+
+  .page-filter__select-buttons {
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
   }
 }
 
 
 @media (min-width: 320px) and (max-width: 1023px) {
-   .page-main__wrapper {
+  .page-main__wrapper {
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
         -ms-flex-direction: row;
@@ -1578,7 +1600,7 @@ button.mfp-close {
 
   .main-menu__burger .button__text {
     display: none;
-}
+  }
 
   .main-menu__burger {
     width: auto;
@@ -1639,9 +1661,6 @@ button.mfp-close {
       background-color: #696969;
       border: none;
       z-index: 50;
-      -webkit-transition: 0.5s;
-      -o-transition: 0.5s;
-      transition: 0.5s;
       -webkit-transform: translateX(-100%);
           -ms-transform: translateX(-100%);
               transform: translateX(-100%);
@@ -1761,19 +1780,31 @@ button.mfp-close {
     max-height: 100vh;
     overflow-y:scroll;
     z-index: 50;
-    -webkit-transition: 0.5s;
-    -o-transition: 0.5s;
-    transition: 0.5s;
     -webkit-transform: translateX(-100%);
         -ms-transform: translateX(-100%);
             transform: translateX(-100%);
   }
 
-  .page-filter__block--active {
+
+      .aside__block--close {
+      -webkit-transition: 0.5s;
+      -o-transition: 0.5s;
+      -webkit-transition: 0.5s all ease-in-out;
+      -o-transition: 0.5s all ease-in-out;
+      transition: 0.5s all ease-in-out;
+  }
+
+    .aside__block--active {
+            -webkit-transition: 0.5s;
+      -o-transition: 0.5s;
+      -webkit-transition: 0.5s all ease-in-out;
+      -o-transition: 0.5s all ease-in-out;
+      transition: 0.5s all ease-in-out;
   -webkit-transform: translateX(0%);
       -ms-transform: translateX(0%);
           transform: translateX(0%); 
   }
+
 
  .page-filter__menu {
     -webkit-box-orient: vertical;
@@ -1811,22 +1842,9 @@ button.mfp-close {
     margin-right: 0;
     width: 50%;
   }
-
-  .page-filter__tab-wrapper {
-    padding: 0 20px;
-  }
-
+  
   .page-filter__tab-strip {
-    margin: 0;
-  }
-
-  .page-filter__tab-button {
-    padding: 10px 25px;
-  }
-
-  .page-filter__select-wrapper {
-    padding-left: 25px;
-    padding-right: 25px;
+   width: 40%;
   }
 
   .page-filter__select-form {
@@ -3329,12 +3347,19 @@ input[type='checkbox']:checked + label .modal-enter__checkbox-indicator::after {
   text-align: center;
 }
 
-#modal-success {
+.modal-success {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 100%;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   max-width: 380px;
+  width: 100%;
   text-align: center;
 }
 
@@ -3353,8 +3378,16 @@ span.modal-success-top {
 
 .modal-success-link {
   font-size: 12px;
+  font-weight: 700;
+  color: #ff9a00;
   text-transform: uppercase;
   text-decoration: underline;
+}
+
+.modal-success-link:hover,
+.modal-success-link:focus,
+.modal-success-link:active {
+  color: #ff9a00;
 }
 
 @media (min-width: 320px) and (max-width: 1023px) {
@@ -3366,7 +3399,10 @@ span.modal-success-top {
   }
 
   .modal-enter__wrapper {
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     margin-top: 20px;
   }
 
@@ -3392,9 +3428,14 @@ span.modal-success-top {
   }
 
   .modal-enter__social-wrap {
-    flex-wrap: nowrap;
-    align-items: flex-end;
-    justify-content: space-evenly;
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+    -webkit-box-align: end;
+        -ms-flex-align: end;
+            align-items: flex-end;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
   }
 
   .modal-enter__social-account {
